# minichat

./: .gitignore  CMakeLists.txt  README.md  README.txt
MiniChatClient/: CMakeLists.txt
MiniChatClient/Header/: ClientApp.h
MiniChatClient/Source/: ClientApp.cpp  main.cpp
MiniChatServer/: CMakeLists.txt
MiniChatServer/Header/: Chatroom.h  MessageHandling.h  ServerApp.h  ServerData.h
MiniChatServer/Source/: Chatroom.cpp  MessageHandling.cpp  ServerApp.cpp  main.cpp
NetworkLibrary/: CMakeLists.txt
NetworkLibrary/Private/: ErrorHandling.h  IPData.h  Packet.h  Platform.h
NetworkLibrary/Public/Network/: ConsoleOutput.h  Constants.h  ErrorHandling.h  FileDescriptor.h  Network.h  Packet.h  Server.h  ServerPollData.h  Socket.h
NetworkLibrary/Source/: ConsoleOutput.cpp  ErrorHandling.cpp  Network.cpp  Packet.cpp  Platform.cpp  Server.cpp  Socket.cpp
